# sdl

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  install.sh
.github/workflows/: relase.yml  rust.yml  trigger-integration.yml
common/: Cargo.toml
common/src/: cli.rs  lib.rs
common/src/command/: client.rs  entity.rs  ipc.rs  mod.rs  server.rs  service_state.rs
common/src/config/: file_config.rs  mod.rs
common/src/console_out/: mod.rs
sdl/: Cargo.toml  build.rs
sdl-cli/: Cargo.toml  README.md  build.rs
sdl-cli/src/: app.rs  callback.rs  cli.rs  frontend.rs  fs_access.rs  generated_serial_number.rs  lib.rs  service_lock.rs
sdl-cli/src/command/: client.rs  entity.rs  ipc.rs  mod.rs  server.rs  service_state.rs
sdl-cli/src/config/: file_config.rs  mod.rs
sdl-cli/src/console_out/: mod.rs
sdl-packet/: Cargo.toml
sdl/proto/: message.proto
sdl/src/: lib.rs
sdl/src/cipher/: cipher.rs  mod.rs
sdl/src/control/: mod.rs  session.rs
sdl/src/core/: bootstrap.rs  mod.rs  runtime.rs
sdl/src/data_plane/: data_channel.rs  gateway_session.rs  mod.rs  route.rs  route_manager.rs  route_snapshot.rs  route_state.rs  route_table.rs  stats.rs
sdl/src/handle/: callback.rs  mod.rs  registrar.rs
sdl/src/nat/: mod.rs  punch.rs  punch_workers.rs  stun.rs
sdl/src/proto/: message.rs
sdl/src/protocol/: body.rs  control_packet.rs  mod.rs  peer_discovery_packet.rs  service_packet.rs
sdl/src/transport/: control_addr.rs  control_channel.rs  gateway_udp_channel.rs  gateway_udp_envelope.rs  http2_channel.rs  http3_channel.rs  mod.rs  quic_channel.rs  udp_channel.rs
sdl/src/util/: dns_query.rs  (+16 more)
vn-link/: Cargo.toml
vnt/: Cargo.toml
vnt-cli/: Cargo.toml  README.md
vnt-cli/src/: app.rs  frontend.rs  lib.rs  main.rs
vnt/proto/: message.proto
vnt/src/: lib.rs
(+85 files in other folders)
