[package]
name = "sdl-cli"
version = "1.2.16"
edition = "2021"
autobins = false

[dependencies]
sdl = { path = "../sdl", package = "sdl", default-features = false, features = ["integrated_tun"] }
log = "0.4.17"
anyhow = "1.0.82"
console = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.32"
getopts = "0.2.21"
gethostname = "0.4.3"
uuid = { version = "1.8.0", features = ["v4"] }
sys-locale = "0.3.1"
interprocess = "2.4.0"
fs2 = "0.4.3"
log4rs = { version = "1.3.0", optional = true }
env_logger = { version = "0.10", optional = true }

[target.'cfg(any(target_os = "linux",target_os = "macos"))'.dependencies]
sudo = "0.6.0"
signal-hook = "0.3.17"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }

[features]
default = ["default-feature"]
default-feature = ["aes_gcm", "aes_cbc", "aes_ecb", "sm4_cbc", "chacha20_poly1305", "port_mapping", "log", "command", "file_config", "lz4", "quic"]

openssl = ["sdl/openssl"]
openssl-vendored = ["sdl/openssl-vendored"]
aes_cbc = ["sdl/aes_cbc"]
aes_ecb = ["sdl/aes_ecb"]
sm4_cbc = ["sdl/sm4_cbc"]
aes_gcm = ["sdl/aes_gcm"]
chacha20_poly1305 = ["sdl/chacha20_poly1305"]
port_mapping = ["sdl/port_mapping"]
lz4 = ["sdl/lz4_compress"]
zstd = ["sdl/zstd_compress"]
upnp = ["sdl/upnp"]
quic = ["sdl/quic"]
log = ["dep:log4rs", "dep:env_logger"]
command = []
file_config = []
integrated_tun = ["sdl/integrated_tun"]

[[bin]]
name = "sdl"
path = "src/bin/sdl.rs"

[[bin]]
name = "sdl-service"
path = "src/bin/sdl-service.rs"

[build-dependencies]
rand = "0.8.5"
chrono = "0.4.23"
